# fenix-barbershop-api

./: .env.example  .flake8  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
accounts/: admin.py  models.py  serializers.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_user_company.py  0003_user_role.py  0004_remove_user_company_remove_user_role.py
app/: celery.py  exceptions.py  settings.py  urls.py
company/: models.py
company/migrations/: 0001_initial.py  0002_companyemployee.py
