[project]
name = "fenix-barbershop-backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Kaio Herculano",email = "kaioherculano12@gmail.com"}
]
requires-python = "^3.13"
dependencies = [
    "django (>=6.0.3,<7.0.0)",
    "djangorestframework (>=3.17.0,<4.0.0)",
    "psycopg[binary] (>=3.3.3,<4.0.0)",
    "celery (>=5.6.2,<6.0.0)",
    "redis (>=7.3.0,<8.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false